# hix-ghcjs-splitmix

./: LOG  flake.nix  hello.cabal
.hix-flake/: flake.nix
src/: hello.hs
