-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: hello-ghcjs
version: 0.0.1
license: BSD3
author: Clifford Beshers
maintainer: Clifford Beshers <clifford.beshers@gmail.com>
stability: experimental
homepage: https://github.com/cliffordbeshers/hix-ghcjs-splitmix/
synopsis: A simple hix/ghcjs that fails to build
category: Console, Text
cabal-version: >= 1.8
build-type: Simple

Description:
   Demonstrate a build bug somewhere in the haskell.nix ghcjs build chain,

source-repository head
  type:     git
  location: https://github.com/cliffordbeshers/hix-ghcjs-splitmix/

flag threaded
  default: False

executable hello
  hs-source-dirs: src
  main-is: hello.hs
  build-depends: base >= 4.2 && < 5
  if impl(ghcjs) || arch(javascript)
    build-depends: ghcjs-base, ghcjs-dom
  
  if flag(threaded)
     ghc-options: -threaded
